# reminder-bot

./: .env.local  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
src/: bot.py
