[project]
name = "reminder-bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Bohdan Agarkov", email = "bogdan122305@gmail.com"},
]
dependencies = [
    "python-telegram-bot>=21.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python src/bot.py"
